# cogex

./: .gitignore  Cargo.toml  README.md  flake.nix
cogex-app/: Cargo.toml
cogex-app/src/: app.rs  main.rs
cogex-cache/: Cargo.toml
cogex-cache/src/: cache.rs  lib.rs
cogex-core/: Cargo.toml
cogex-core/src/: lib.rs  phase.rs  stimulus.rs  trial.rs
cogex-experiment/: Cargo.toml
cogex-experiment/src/: config.rs  lib.rs  state.rs  trial.rs
cogex-render/: Cargo.toml
cogex-render/benches/: blits.rs  render_frame.rs  render_phase.rs
cogex-render/src/: lib.rs  render.rs
cogex-timing/: Cargo.toml
cogex-timing/src/: lib.rs  timer.rs
src/: experiment.rs  main.rs  renderer.rs  timer.rs
src/.cargo/: config.toml
