[package]
name = "cognitive-experiment"
version = "0.1.0"
edition = "2021"

[dependencies]
winit = "0.30"
pixels = "0.15"
anyhow = "1.0"
tiny-skia = "0.11"
rand = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
pollster = "0.4"
# fontdue = "0.8"
ab_glyph = "0.2"

# Platform specific dependencies
[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = ["Win32_System_Threading", "Win32_Foundation"] }

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"

[target.'cfg(target_os = "macos")'.dependencies]
mach2 = "0.4"

[features]
default = []
high_precision_timer = []
