[package]
name = "cogex-app"
version = "0.1.0"
edition = "2024"

[dependencies]
cogex-core = { path = "../cogex-core" }
cogex-timing = { path = "../cogex-timing" }
cogex-render = { path = "../cogex-render" }
cogex-experiment = { path = "../cogex-experiment" }
winit = "0.30"
pixels = "0.15"
tiny-skia = "0.11"
anyhow = "1.0"
image = "0.25.8"
rand = "0.9.2"

