[package]
name = "cogex-render"
version = "0.1.0"
edition = "2024"

[features]
bench = []

[dev-dependencies]
criterion = "0.5"
pprof = { version = "0.13", features = ["flamegraph" ,"criterion"] }

[dependencies]
cogex-core = { path = "../cogex-core" }
cogex-cache = { path = "../cogex-cache" }
cogex-timing = { path = "../cogex-timing"}
tiny-skia = "0.11"
ab_glyph = "0.2"
anyhow = "1.0"
bytemuck = "1.24"

[profile.release]
debug = true

[profile.bench]
debug = true

[[bench]]
name = "blits"
harness = false

[[bench]]
name = "render_phase"
harness = false

[[bench]]
name = "render_frame"
harness = false
